--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #004080;
+    background-color: #651423;
     color: white;
     padding: 20px;
 }
@@ -22,7 +22,7 @@ main {
 }
 
 footer {
-    background-color: #f1f1f1;
+    background-color: #F3F1DB;
     padding: 15px;
     margin-top: 30px;
 }
