--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 }
 
 header {
-    background-color: #651423;
-    color: white;
+    background-color: #840018;
+    color: falu red;
     padding: 20px;
 }
 
