--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ footer {
 }
 
 .filial {
-    background-color: #ffffff;
+    background-color: #FFF0B6;
     border-radius: 12px;
     padding: 20px;
     width: 250px;
