--- a/style.css
+++ b/style.css
@@ -86,8 +86,8 @@ footer {
 }
 
 .contato-form button {
-    background: #7D0C0C;
-    color: barn red;
+    background: #FFF9EA;
+    color: cosmic latte;
     padding: 10px;
     border: none;
     border-radius: 6px;
