--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 }
 
 header {
-    background-color: #840018;
-    color: falu red;
+    background-color: #FFFDD0;
+    color: cream;
     padding: 20px;
 }
 
