--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 }
 
 header {
-    background-color: #FFFDD0;
-    color: cream;
+    background-color: #650000;
+    color: blood red;
     padding: 20px;
 }
 
