--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ footer {
 }
 
 .dados-planilha th {
-  background: linear-gradient(90deg, #620E0E, #651B1B);
+  background: linear-gradient(90deg, #620E0E, #801919);
   color: #fff;
   text-align: left;
   padding: 10px;
